Changes in version 1.2.0 alpha (2007-07-26):
--------------------------------------------
- Separated data and presentation layer (see wxSFDiagramManager and wxSFShapeCanvas classes)
- Updated example code to demonstrate this feature (v1.5)

Changes in version 1.1.6 alpha (2007-07-25):
--------------------------------------------
- Added ability to define shape types accepted by shape canvas instance (functions
  wxSFShapeCanvas::AcceptShape(), wxSFShapeCanvas::IsShapeAccepted(), wxSFShapeCanvas::ClearAcceptedShapes())
- Updated example code to demonstrate this feature (v1.4)
- Fixed wxSFShapeBase::DoAlignment() function

Changes in version 1.1.5 alpha (2007-07-24):
--------------------------------------------
- Fixed function FitToChildren in diamond shape (wxSFDiamondShape)
- Fixed canvas refresh during shape handle dragging
- Added function for alignment of selected shapes in the shape canvas (wxSFShapeCanvas::AlignSelected())
- Updated example code to demonstrate AlignSelected() function

Changes in version 1.1.4 alpha (2007-07-21):
--------------------------------------------
- Various bug fixes, improvements and code clean up
- Function wxSFShapeBase::Scale() can now scale also child shapes

Changes in version 1.1.3 alpha (2007-07-17):
--------------------------------------------
- Added ability to define shape's alignment (child shape can be aligned
inside its parent with given direction and offset)

Changes in version 1.1.2 alpha (2007-07-12):
--------------------------------------------
- Fixed functions wxSFShapeBase::GetNeighbours() and wxSFShapeCanvas::GetNeighbours()

Changes in version 1.1.1 alpha (2007-07-12):
--------------------------------------------
- Added ability to find neighbour shapes (functions wxSFShapeBase::GetNeighbours() and wxSFShapeCanvas::GetNeighbours())

Changes in version 1.1.0 alpha (2007-07-12):
--------------------------------------------