@@ -2,6 +2,7 @@ Changes in version 1.2.0 alpha (2007-07-26):
 --------------------------------------------
 - Separated data and presentation layer (see wxSFDiagramManager and wxSFShapeCanvas classes)
 - Updated example code to demonstrate this feature (v1.5)
+- Added function wxSFShapeBase::AssignChild()
 
 Changes in version 1.1.6 alpha (2007-07-25):
 --------------------------------------------
